--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -2,6 +2,7 @@
  * Start Bootstrap - Landing Page (https://startbootstrap.com/template-overviews/landing-page)
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
+ additional infos
  */
 
 body, html {
