--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -4,6 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  additional infos
  more infos
+ some master infos
  */
 
 body, html {
